<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:fitsSystemWindows="true"
        android:theme="@style/AppToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white" />

    <GridLayout
        android:id="@+id/grid_layout_activity_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:background="@drawable/grid_background"
        app:layout_constraintVertical_bias="0.1">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:background="@drawable/title_background"
            android:padding="@dimen/default_padding" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:background="@drawable/title_background"
            android:gravity="center"
            android:padding="@dimen/default_padding"
            android:text="@string/title_arraylist"
            android:textSize="@dimen/default_text_size" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_gravity="fill"
            android:background="@drawable/title_background"
            android:gravity="center"
            android:padding="@dimen/default_padding"
            android:text="@string/title_linkedlist"
            android:textSize="@dimen/default_text_size" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_gravity="center"
            android:background="@drawable/title_background"
            android:gravity="fill"
            android:padding="@dimen/default_padding"
            android:text="@string/title_copyonwritearraylist"
            android:textSize="@dimen/default_text_size" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:background="@drawable/title_background"
            android:gravity="center"
            android:padding="@dimen/default_padding"
            android:text="@string/title_addmid"
            android:textSize="@dimen/default_text_size" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_addmid_arraylist"
            android:layout_gravity="fill"
            android:background="@drawable/cell_background"
            android:gravity="center"
            android:textSize="@dimen/default_text_size"
            tools:text="123ms" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_addmid_linkedlist"
            android:layout_gravity="fill"
            android:background="@drawable/cell_background"
            android:gravity="center"
            android:textSize="@dimen/default_text_size"
            tools:text="123ms" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_addmid_copyonwritearraylist"
            android:layout_gravity="fill"
            android:background="@drawable/cell_background"
            android:gravity="center"
            android:textSize="@dimen/default_text_size"

            tools:text="123ms" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:background="@drawable/title_background"
            android:gravity="center"
            android:padding="@dimen/default_padding"
            android:text="@string/title_removemid"
            android:textSize="@dimen/default_text_size" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_removemid_arraylist"
            android:layout_gravity="fill"
            android:background="@drawable/cell_background"
            android:gravity="center"
            android:textSize="@dimen/default_text_size"
            tools:text="123ms" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_removemid_linkedlist"
            android:layout_gravity="fill"
            android:background="@drawable/cell_background"
            android:gravity="center"
            android:textSize="@dimen/default_text_size"
            tools:text="123ms" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_removemid_copyonwritearraylist"
            android:layout_gravity="fill"
            android:background="@drawable/cell_background"
            android:gravity="center"
            android:textSize="@dimen/default_text_size"
            tools:text="123ms" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:background="@drawable/title_background"
            android:gravity="center"
            android:padding="@dimen/default_padding"
            android:text="@string/title_search"
            android:textSize="@dimen/default_text_size" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_search_arraylist"
            android:layout_gravity="fill"
            android:background="@drawable/cell_background"
            android:gravity="center"
            android:textSize="@dimen/default_text_size"
            tools:text="123ms" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_search_linkedlist"
            android:layout_gravity="fill"
            android:background="@drawable/cell_background"
            android:gravity="center"
            android:textSize="@dimen/default_text_size"
            tools:text="123ms" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_search_copyonwritearraylist"
            android:layout_gravity="fill"
            android:background="@drawable/cell_background"
            android:gravity="center"
            android:textSize="@dimen/default_text_size"
            tools:text="123ms" />
    </GridLayout>

    <ProgressBar
        android:id="@+id/progress_circular_activity_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/progress_bar_width"
        android:minHeight="@dimen/progress_bar_height"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/grid_layout_activity_main" />
</androidx.constraintlayout.widget.ConstraintLayout>